--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ plotly==5.24.1
 dash==2.18.2
 echarts-python==0.1.3
 pytest==8.3.3
+pytest-cov==5.0.0
+pytest-mock==3.14.0
 ruff==0.6.9
 black==24.10.0
 isort==5.13.2
+httpx==0.27.2
